# PTEF

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md
.github/workflows/: ci-python.yml  ci-r.yml
data/lexicon/: bp_number_tokens_syllables.csv
docs/: getting-started.md  index.md  methodology.md
python/: pyproject.toml
python/notebooks/: 01_quickstart.ipynb  02_validation_tts_stub.ipynb  03_advanced_features.ipynb
python/src/ptef/: __init__.py  bootstrap.py  cli.py  combinatorics.py  context.py  duration.py  grammar.py  lexicon.py  pauses.py  ptef.py  validation.py
python/tests/: test_cli.py  test_combinatorics.py  test_duration.py  test_grammar.py  test_lexicon.py
r/: DESCRIPTION  NAMESPACE
r/R/: combinatorics.R  duration.R  grammar.R  lexicon.R  pauses.R  ptef.R
r/tests/testthat/: test-combinatorics.R  test-duration.R  test-grammar.R  test-lexicon.R
r/vignettes/: ptef-intro.Rmd
